<!-- Main container holds Title, Play Details container, Overview, and Trailer container -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.nano.movies.activities.MovieDetailFragment">
    <!-- Top-Level Movie title, doesn't scroll so always visible-->
    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="Movie Title"
        android:textSize="30sp" />
    <!-- Top-level ScrollView container.  -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Container holding thumbnail and play details container -->
            <LinearLayout
                android:id="@+id/movie_details_container"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_40"
                android:layout_marginStart="@dimen/margin_40"
                android:orientation="horizontal">
                <!-- Thumbnail sized image of poster -->
                <ImageView
                    android:id="@+id/img_thumbnail"
                    android:layout_width="@dimen/movie_detail_width"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/desc_title"/>
                <!-- Play details container hold release year, runtime,
                     viewer rating, and favorites button
                     In wide-screen also contains the overview -->
                <LinearLayout
                    android:id="@+id/play_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginStart="@dimen/margin_20"
                    android:orientation="vertical">

                    <RatingBar
                        android:id="@+id/rating_bar_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        style="?android:attr/ratingBarStyleSmall"
                        android:numStars="10"/>


                    <TextView
                        android:id="@+id/tv_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_viewer_rating"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textColorSecondary" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_release_year"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/textColorSecondary" />

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_runtime"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textColorSecondary"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/btn_mark_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_mark_fav" />

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_overview"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Container holding Trailers and Reviews -->
            <include
                layout="@layout/reviews_trailers"
                android:layout_below="@+id/movie_details_container"
                android:id="@+id/reviews_and_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_40"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20">
            </include>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>